// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package rpcpb;

import "google/api/annotations.proto";

// The box database rpc service definition. It's for development only
service DatabaseCommand {
    // get all keys of database
    rpc GetDatabaseKeys (GetDatabaseKeysRequest) returns (GetDatabaseKeysResponse) {
        option (google.api.http) = {
            post: "/v1/db/keys"
            body: "*"
        };
    }

    // get value of associate with passed key in database
    rpc GetDatabaseValue (GetDatabaseValueRequest) returns (GetDatabaseValueResponse) {
        option (google.api.http) = {
            post: "/v1/db/get"
            body: "*"
        };
    }
}

message GetDatabaseKeysRequest {
    string table = 1;
    string prefix = 2;
    int32 skip = 3;
    int32 limit = 4;
}

message GetDatabaseKeysResponse {
    int32 code = 1;
    string message = 2;
    int32 skip = 3;
    repeated string keys = 4;
}

message GetDatabaseValueRequest {
    string table = 1;
    string key = 2;
}

message GetDatabaseValueResponse {
    int32 code = 1;
    string message = 2;
    bytes value = 3;
}
